WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181665
[CMake][Mac] Fix the build errors
https://bugs.webkit.org/show_bug.cgi?id=181665
Summary
[CMake][Mac] Fix the build errors
Fujii Hironori
Reported
2018-01-15 21:10:49 PST
[CMake][Mac] EventHeaders.h:133:10: fatal error: 'JSMerchantValidationEvent.h' file not found
https://build.webkit.org/builders/Apple%20El%20Capitan%20CMake%20Debug%20%28Build%29/builds/8436
> /Volumes/Data/slave/elcapitan-cmake-debug/build/WebKitBuild/Debug/DerivedSources/WebCore/EventHeaders.h:133:10: fatal error: 'JSMerchantValidationEvent.h' file not found
Attachments
Patch
(5.71 KB, patch)
2018-01-15 23:42 PST
,
Fujii Hironori
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-01-15 21:55:38 PST
One more error in my Mac:
> In file included from /Users/fujii/work/webkit/g1/Source/WebKit/NetworkProcess/NetworkProcess.cpp:52: > /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/WebKit/WebPageProxyMessages.h:34:10: fatal error: > 'WebCore/ApplicationManifest.h' file not found > #include <WebCore/ApplicationManifest.h>
Fujii Hironori
Comment 2
2018-01-15 22:22:13 PST
Also:
> [ 74%] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/WebProcess/Geolocation/GeolocationPermissionRequestManager.cpp.o > /Users/fujii/work/webkit/g1/Source/WebKit/WebProcess/FileAPI/BlobRegistryProxy.cpp:34:10: fatal error: > 'WebCore/SWContextManager.h' file not found > #include <WebCore/SWContextManager.h>
Fujii Hironori
Comment 3
2018-01-15 22:49:59 PST
Also:
> /Users/fujii/work/webkit/g1/Source/WebKit/UIProcess/API/Cocoa/WKProcessPool.mm:453:48: error: no member named 'serviceWorkerProxy' > in 'WebKit::WebProcessPool' > auto* serviceWorkerProcess = _processPool->serviceWorkerProxy();
Fujii Hironori
Comment 4
2018-01-15 22:50:18 PST
Also:
> Undefined symbols for architecture x86_64: > "_OBJC_CLASS_$_WKInspectorWKWebView", referenced from: > objc-class-ref in WKInspectorViewController.mm.o > "_OBJC_CLASS_$_WKInspectorWindow", referenced from: > objc-class-ref in WebInspectorProxyMac.mm.o > "WebKit::TouchBarMenuData::addMenuItem(WebKit::TouchBarMenuItemData const&)", referenced from: > WebKit::WebPageProxy::touchBarMenuItemDataAdded(WebKit::TouchBarMenuItemData const&) in WebPageProxy.cpp.o > "WebKit::TouchBarMenuData::removeMenuItem(WebKit::TouchBarMenuItemData const&)", referenced from: > WebKit::WebPageProxy::touchBarMenuItemDataRemoved(WebKit::TouchBarMenuItemData const&) in WebPageProxy.cpp.o > "WebKit::TouchBarMenuData::decode(IPC::Decoder&, WebKit::TouchBarMenuData&)", referenced from: > bool IPC::ArgumentCoder<WebKit::TouchBarMenuData>::decode<WebKit::TouchBarMenuData, (void*)0>(IPC::Decoder&, WebKit::TouchBarMenuData&) in WebPageProxyMessageReceiver.cpp.o > "WebKit::TouchBarMenuData::TouchBarMenuData(WebCore::HTMLMenuElement const&)", referenced from: > WebKit::WebPage::sendTouchBarMenuDataAddedUpdate(WebCore::HTMLMenuElement&) in WebPage.cpp.o > "WebKit::TouchBarMenuItemData::decode(IPC::Decoder&)", referenced from: > std::optional<WebKit::TouchBarMenuItemData> IPC::ArgumentCoder<WebKit::TouchBarMenuItemData>::decode<WebKit::TouchBarMenuItemData, (void*)0>(IPC::Decoder&) in WebPageProxyMessageReceiver.cpp.o > "WebKit::TouchBarMenuItemData::TouchBarMenuItemData(WebCore::HTMLMenuItemElement const&)", referenced from: > WebKit::WebPage::sendTouchBarMenuItemDataAddedUpdate(WebCore::HTMLMenuItemElement&) in WebPage.cpp.o > WebKit::WebPage::sendTouchBarMenuItemDataRemovedUpdate(WebCore::HTMLMenuItemElement&) in WebPage.cpp.o > "WebKit::TouchBarMenuData::encode(IPC::Encoder&) const", referenced from: > IPC::ArgumentCoder<WebKit::TouchBarMenuData>::encode(IPC::Encoder&, WebKit::TouchBarMenuData const&) in WebPage.cpp.o > "WebKit::TouchBarMenuItemData::encode(IPC::Encoder&) const", referenced from: > IPC::ArgumentCoder<WebKit::TouchBarMenuItemData>::encode(IPC::Encoder&, WebKit::TouchBarMenuItemData const&) in WebPage.cpp.o
Fujii Hironori
Comment 5
2018-01-15 23:25:24 PST
> [ 98%] Linking CXX executable ../../bin/WebKitTestRunner > Undefined symbols for architecture x86_64: > "_OBJC_CLASS_$__WKApplicationManifest", referenced from: > objc-class-ref in TestControllerCocoa.mm.o > ld: symbol(s) not found for architecture x86_64 > clang: error: linker command failed with exit code 1 (use -v to see invocation) > make[2]: *** [bin/WebKitTestRunner] Error 1
Fujii Hironori
Comment 6
2018-01-15 23:25:38 PST
> [ 96%] Building C object Tools/MiniBrowser/mac/CMakeFiles/MiniBrowser.dir/AppDelegate.m.o > In file included from <built-in>:1: > In file included from /Users/fujii/work/webkit/g1/Tools/MiniBrowser/mac/MiniBrowser_Prefix.pch:28: > In file included from /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebKit/WebKit.h:1: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/Shared/API/Cocoa/WebKit.h:58: > In file included from /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebKit/WebKitLegacy.h:1: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/UIProcess/API/Cocoa/WebKitLegacy.h:31: > In file included from /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebKit/WebBackForwardList.h:1: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/UIProcess/WebBackForwardList.h:28: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/Shared/API/APIObject.h:29: > In file included from /Users/fujii/work/webkit/g1/Source/WTF/wtf/RefCounted.h:24: > /Users/fujii/work/webkit/g1/Source/WTF/wtf/FastMalloc.h:24:10: fatal error: 'new' file not found > #include <new> > ^~~~~ > 1 error generated. > make[2]: *** [Tools/MiniBrowser/mac/CMakeFiles/MiniBrowser.dir/AppDelegate.m.o] Error 1 > make[1]: *** [Tools/MiniBrowser/mac/CMakeFiles/MiniBrowser.dir/all] Error 2
> [ 97%] Building CXX object Tools/WebKitTestRunner/CMakeFiles/WebKitTestRunner.dir/mac/UIScriptControllerMac.mm.o > In file included from /Users/fujii/work/webkit/g1/Tools/DumpRenderTree/mac/ObjCPlugin.m:30: > In file included from /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebKit/WebKit.h:1: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/Shared/API/Cocoa/WebKit.h:58: > In file included from /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebKit/WebKitLegacy.h:1: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/UIProcess/API/Cocoa/WebKitLegacy.h:31: > In file included from /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebKit/WebBackForwardList.h:1: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/UIProcess/WebBackForwardList.h:28: > In file included from /Users/fujii/work/webkit/g1/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebKit/APIObject.h:1: > In file included from /Users/fujii/work/webkit/g1/Source/WebKit/Shared/API/APIObject.h:29: > In file included from /Users/fujii/work/webkit/g1/Source/WTF/wtf/RefCounted.h:24: > /Users/fujii/work/webkit/g1/Source/WTF/wtf/FastMalloc.h:24:10: fatal error: 'new' file not found > #include <new> > ^~~~~ > 1 error generated. > make[2]: *** [Tools/DumpRenderTree/CMakeFiles/DumpRenderTree.dir/mac/ObjCPlugin.m.o] Error 1 > make[1]: *** [Tools/DumpRenderTree/CMakeFiles/DumpRenderTree.dir/all] Error 2 > /Users/fujii/work/webkit/g1/Tools/WebKitTestRunner/mac/UIScriptControllerMac.mm:82:20: warning: implicit conversion from > 'const NSInteger' (aka 'const long') to 'int' changes value from 9223372036854775807 to -1 [-Wconstant-conversion] > location = NSNotFound; > ~ ^~~~~~~~~~ > 1 warning generated. > [ 97%] Linking CXX executable ../../bin/WebKitTestRunner > [ 98%] Built target WebKitTestRunner
Fujii Hironori
Comment 7
2018-01-15 23:26:32 PST
I don't know how to fix errors of
Comment 6
. .m files can't include <new>.
Fujii Hironori
Comment 8
2018-01-15 23:42:59 PST
Created
attachment 331370
[details]
Patch
maple
Comment 9
2018-01-16 05:52:12 PST
What you build is the newest code of Webkit?I have some error about build , can you take a look? thanks a lot
https://bugs.webkit.org/show_bug.cgi?id=181288
Alex Christensen
Comment 10
2018-01-16 10:55:46 PST
http://trac.webkit.org/r226979
Radar WebKit Bug Importer
Comment 11
2018-01-16 10:58:32 PST
<
rdar://problem/36550059
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug