[CMake][Mac] Fix the build errors https://bugs.webkit.org/show_bug.cgi?id=181665

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2018-01-16
Reviewed by Alex Christensen.

Source/WebCore:

No new tests (No behavior change)

* CMakeLists.txt: Added Modules/paymentrequest/MerchantValidationEvent.idl to compile.
* PlatformMac.cmake: Added Modules/paymentrequest/MerchantValidationEvent.cpp to compile.
Added workers/service/context and Modules/applicationmanifest as forwarding header paths.

Source/WebKit:

* CMakeLists.txt: Added TouchBarMenuData.cpp and TouchBarMenuItemData.cpp to compile.
* PlatformMac.cmake: Added _WKApplicationManifest.mm, WKInspectorWKWebView.mm and WKInspectorWindow.mm to compile.
* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _webPageContentProcessCount]): Call WebProcessPool::serviceWorkerProxy() only if ENABLE(SERVICE_WORKER).



Canonical link: https://commits.webkit.org/197529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226979 268f45cc-cd09-0410-ab3c-d52691b4dbfc